# outagewatch

./: .envrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml
backend/evals/: explain_cases.py  run_explain_eval.py
backend/scripts/: deploy.sh  dev_server.py  make_zip_table.py
backend/src/outagewatch/: __init__.py  causes.py  config.py  explain.py  geocode.py  push.py  ratelimit.py  rules.py  service.py  store.py  territory.py  zipcodes.py
backend/src/outagewatch/api/: main.py
backend/src/outagewatch/api/static/: firebase-messaging-sw.js  index.html  manifest.webmanifest  privacy.html  statewide.html  sw.js  terms.html  widget.html
backend/src/outagewatch/api/static/css/: app.css
backend/src/outagewatch/api/static/js/: app.js  firebase-config.js
backend/src/outagewatch/data/: ca_zips.csv
backend/src/outagewatch/feeds/: pge.py
backend/src/watcher/: __init__.py  differ.py  dispatch.py  matcher.py  poller.py  serde.py  types.py
backend/tests/: fakes.py  test_api.py  test_causes.py  test_differ.py  test_explain.py  test_geocode.py  test_matcher.py  test_pge_feed.py  test_ratelimit.py  test_rules.py  test_serde.py  test_service.py
backend/tests/fixtures/20260709/: outages_l4.geojson  outages_l5.json  outages_l8.geojson  outages_status.json
mobile/: .gitignore  settings.gradle.kts
mobile/androidApp/: build.gradle.kts
mobile/androidApp/src/debug/: AndroidManifest.xml
mobile/androidApp/src/main/: AndroidManifest.xml
mobile/androidApp/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
mobile/gradle/: libs.versions.toml
mobile/iosApp/Configuration/: Config.xcconfig
mobile/iosApp/iosApp/: iOSApp.swift
mobile/shared/: build.gradle.kts
scripts/: env.ps1
(+39 files in other folders)
